classDiagram
    class User {
        +string uid
        +string email
        +string displayName
        +Role role
    }
    class DiagnosticReport {
        +string id
        +string ownerUid
        +string summary
        +DateTime createdAt
    }
    class ReportSection {
        +string title
        +Map metrics
    }
    class ForumPost {
        +string id
        +string title
        +string body
        +string[] tags
        +double avgRating
        +int commentCount
        +DateTime createdAt
    }
    class Comment {
        +string id
        +string body
        +string parentCommentId
        +int depth
        +DateTime createdAt
    }
    class Rating {
        +string userId
        +int stars
    }
    class SolutionArticle {
        +string id
        +string title
        +string body
        +string category
        +string[] tags
        +bool isPublished
    }
    class SupportTicket {
        +string id
        +string subject
        +string body
        +TicketStatus status
        +DateTime createdAt
    }
    class TicketResponse {
        +string id
        +string body
        +bool isStaff
        +DateTime createdAt
    }
    class ChatMessage {
        +string role
        +string content
        +DateTime timestamp
    }
    class DiagnosticServer {
        +string key
        +string name
        +string location
    }

    User "1" --> "*" DiagnosticReport : owns
    User "1" --> "*" ForumPost : authors
    User "1" --> "*" Comment : writes
    User "1" --> "*" SupportTicket : opens
    User "1" --> "*" TicketResponse : posts
    DiagnosticReport "1" *-- "*" ReportSection : contains
    ForumPost "1" *-- "*" Comment : has
    ForumPost "1" *-- "*" Rating : has
    Comment "0..1" --> "*" Comment : replies-to
    SupportTicket "1" *-- "*" TicketResponse : has
    User "1" --> "*" SolutionArticle : authors
    User "1" --> "*" ChatMessage : sends
